[package]
name = "async-serialization"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Traits for serializing into AsyncWrites and deserializing from AsyncReads."
repository = "https://github.com/AljoschaMeyer/async-serialization"
readme = "README.md"
license = "MIT"
publish = false

[dependencies]
futures-core = "0.2.0-alpha"
futures-io = "0.2.0-alpha"
